src/App.css
.App {
  text-align: center;
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

ul{
  list-style: none;
}

.product{
  min-width: 600px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.product__price{
  margin: 0 1rem;
}

.cart__total-container{
  display: flex;
  width: 100%;
  max-width: 500px;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

@media screen and (max-width: 600px) {
  .product-list{
    width: 100vw;
    flex-direction: column;
  }
  .product{
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin: 1rem 0;
  }

  .product__price{
    margin-left: 0;
  }

  .cart__total-container{
    justify-content: space-around;
  }
}

